tests/spec/pass/channel_basic.aja
ch = chan()
send(ch, 10)
print(recv(ch))

send(ch, 12)
print(recv(ch))

close(ch)
