tests/spec/fail/close_closed_chan.aja
ch = chan()
close(ch)
close(ch)
